src/test/compile-fail/fn-expr-typestate-2.rs
// error-pattern:Unsatisfied precondition
// xfail-stage0

fn main() {
  auto j = (fn () -> int {
        let int i;
        ret i;
    })();
  log_err j;
}
